# libsrs2

./: .gitignore  AUTHORS  CHANGELOG  COPYING  FAQ  INSTALL  LICENSE  LICENSE.BSD  Makefile  Makefile.am  NEWS  PERFORMANCE_RESULTS  README  TODO  bootstrap  config.h.in  configure.ac  configure.in  main.c  util.h
debian/: README.Debian  changelog  control  copyright  files  postinst  rules  shlibs.local  srs.1
libsrs/: Makefile.am  base.c  base.h  error.c  main.h  srs.c  srs.h  util.c
libsrs2/: Makefile.am  crypto.c  crypto.h  error.h  sha1.c  srs2.c  srs2.h  win32.h
perl/: Makefile.PL  SRS_XS.pm  SRS_XS.xs  typemap
perl/t/: 01load.t  02constants.t  02forward.t  03basic.t  03reverse.t  05forward.t  10regression.t
python/: libsrs2.c  setup.py
tools/: Makefile  Makefile.am  srs.c  srs_cmd.h  test.c  test2.c
win32/: libsrs2_win32.sln  libsrs2_win32.vcproj
