dnl Process this file with autoconf to produce a configure script.
AC_INIT(libsrs/srs.h)
AM_INIT_AUTOMAKE(libsrs, 1.0.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lcrypto:
AC_CHECK_LIB(crypto, EVP_sha1)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h sys/time.h unistd.h ssl.h openssl/ssl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday strdup strstr)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(libsrs/Makefile tools/Makefile Makefile)
